--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                         Enjoy guaranteed discounts, special previews,  and much more. Sign up today - it’s free and only takes a minute to join.
                     </p>
                     <a href="https://www.ikea.com/in/en/ikea-family/">See more</a>
-                    <div class="button">
-                        <button>Join the Club</button>
+                    <div >
+                        <button class="button">Join the Club</button>
                     </div>
                 </div>
                 <div class="sub-sec" id="second">
@@ -25,8 +25,8 @@
                     <p>
                         Join the membership program for business customers with exciting benefits and features. Join us for free and enjoy member discounts, quick-fix tips, online tutorials and a lot more.                </p>
                     <a href="https://www.ikea.com/in/en/ikea-family/">See more</a>
-                    <div class="button">
-                        <button>Join now</button>
+                    <div >
+                        <button class="button">Join now</button>
                     </div>
                 </div>
             </div>
@@ -96,7 +96,6 @@
                 <p>Privacy policy</p>
                 <p>Cookie policy</p>
                 <p>Cookie settings</p>
-                <p>Terms and Conditions</p>
             </div>
         </div>
     </footer>
