--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="sidebar">
+        <div id="menu">
+            <div id="menu-icon">
+                <img src="menu-icon.png" alt="">
+            </div>
+            <div id="menu-text"><p>Menu</p></div>
+        </div>
+        <div id="back-top">
+            <button id="arrow">
+                <div><img src="arrow.png" alt=""></div>
+
+            </button>
+        </div>
+    </div>
     <footer>
         <div id="section-1">
             <div class="section" id="part1">
